# whynote

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  docker-compose.yml  fonts-face-c883577c2977639a.css  frontend-yew-158d91dceebe6354.js  frontend-yew-158d91dceebe6354_bg.wasm  frontend-yew-2bdc773db392e045_bg.wasm  frontend-yew-3c6535ccc1e576e2.js  frontend-yew-3c6535ccc1e576e2_bg.wasm  frontend-yew-4624cac3efc6ca9b.js  frontend-yew-4624cac3efc6ca9b_bg.wasm  frontend-yew-586b6eaa95df99d6.js  frontend-yew-586b6eaa95df99d6_bg.wasm  frontend-yew-66f31cb96065fa2f.js  frontend-yew-66f31cb96065fa2f_bg.wasm  frontend-yew-7fc0273874d0efe6.js  frontend-yew-7fc0273874d0efe6_bg.wasm  frontend-yew-a13648433ca8e0ac.js  frontend-yew-a13648433ca8e0ac_bg.wasm  frontend-yew-ba3383cdc7c8ce0d.js  frontend-yew-ba3383cdc7c8ce0d_bg.wasm  frontend-yew-df2b076f6ad49146.js  frontend-yew-df2b076f6ad49146_bg.wasm  frontend-yew-e3cd35595ffc77f3.js  frontend-yew-e3cd35595ffc77f3_bg.wasm  frontend-yew-ea240ac1a07fb8c9.js  frontend-yew-ea240ac1a07fb8c9_bg.wasm  frontend-yew-ecf32e4b29578a60.js  frontend-yew-ecf32e4b29578a60_bg.wasm  index.html  query.txt  sign-in-41d0ce597a3df528.css  startup.sh
.github/workflows/: build-backend.yml  build.yml  gh-page.yml  mac-test.yml  release.yml  test-build.yml
backend/: Cargo.toml
backend-axum/: .env.example  Cargo.toml  Dockerfile  TODO.md  check_pub_struct_uniq.sh
backend-axum/src/: lib.rs  main.rs
backend-axum/src/articles/: models.rs  mutations.rs  queries.rs  services.rs
backend-axum/src/categories/: models.rs  mutations.rs  queries.rs  services.rs
backend-axum/src/dbs/: mod.rs  mongo.rs
backend-axum/src/gql/: mod.rs  mutations.rs  queries.rs
backend-axum/src/topics/: models.rs  mutations.rs  queries.rs  services.rs
backend-axum/src/users/: mod.rs  models.rs  mutations.rs  queries.rs  services.rs
backend-axum/src/utils/: common.rs  constants.rs  cred.rs  mod.rs
backend-axum/src/wishes/: mod.rs  models.rs  mutations.rs  queries.rs  services.rs
backend/src/: main.rs
backend/src/dbs/: mod.rs  mongo.rs
backend/src/gql/: mod.rs  queries.rs
backend/src/users/: services.rs
backend/src/utils/: constants.rs
data/dump/whynote/: articles.bson  articles.metadata.json  categories.bson  categories.metadata.json  categories_users.bson  categories_users.metadata.json  topics.bson  topics.metadata.json  topics_articles.bson  topics_articles.metadata.json  users.bson  users.metadata.json  wishes.bson  wishes.metadata.json
frontend/: .env.toml  Cargo.toml  README.md  index.html
frontend-dev/: Cargo.toml
frontend-yew/: Cargo.toml  Dockerfile  Trunk.toml  build_prop.toml  index.html
frontend-yew/assets/: articles-list.css  github-markdown.css  theme.sass
frontend-yew/blog/: index.html
frontend-yew/graphql/: article.graphql  articles.graphql  categorieslist.graphql  category.graphql  home.graphql  schema.graphql  signin.graphql  topicslist.graphql  user.graphql
frontend-yew/graphql/mutation/: article.graphql  category.graphql  init.graphql  topic.graphql  user.graphql
frontend-yew/src/: lib.rs  main.rs
frontend-yew/src/app/: about.rs  home.rs  mod.rs
frontend-yew/src/components/: editor.rs  mod.rs  theme_toggle.rs
frontend-yew/src/components/bottom_container/: footer.rs  load_js.rs  mod.rs
frontend-yew/src/components/main_container/: article.rs  articles.rs  articles_list.rs  emphasis.rs  main_container.rs  mod.rs  secondary.rs  sticky.rs
frontend-yew/src/components/manage_container/: content_card.rs  contents_list.rs  editor.rs  mod.rs  profile.rs  update_prefile.rs
frontend-yew/src/components/manage_container/init/: mod.rs  new_articles.rs  new_category.rs  new_user.rs
frontend-yew/src/components/manage_container/manage/: categories.rs  mod.rs  topics.rs
frontend-yew/src/components/top_container/: header.rs  manage_header.rs  manage_top_container.rs  mod.rs  nav.rs  user_drop_down.rs
frontend-yew/src/pages/: article.rs  category.rs  home.rs  manage.rs  mod.rs  signin.rs  user.rs
frontend-yew/src/pages/common/: article.rs  category.rs  home.rs  mod.rs  search.rs  test.rs  user.rs
frontend-yew/src/pages/manage/: categories.rs  editor.rs  init.rs  manage.rs  mod.rs  new_editor.rs  profile.rs  signin.rs  topics.rs
frontend-yew/src/services/: article.rs  articles.rs  categories.rs  init.rs  mod.rs  search.rs  signin.rs  topics.rs  use_query.rs  user.rs
frontend-yew/src/types/: article.rs  init.rs  mod.rs
frontend-yew/src/utils/: common.rs  constants.rs  mod.rs  storage.rs  token.rs
frontend-yew/tests/: web.rs
frontend/assets/css/: style.scss
frontend/graphql/: all_users.graphql  schema.graphql  users.graphql
frontend/src/: main.rs
frontend/src/pages/: home.rs  mod.rs  projects.rs  users.rs
frontend/src/services/: queries.rs
