[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.3", features = ["bson", "chrono"] }
axum = "0.7.5"
base64 = "0.22.1"
bson = "2.10.0"
deunicode = "1.4.4"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
pulldown-cmark = "0.10.3"
regex = "1.10.4"
ring = "0.17.8"
serde = { version="1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
tower = "0.4.13"
tower-http = { version="0.5.2", features = ["trace", "cors"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mongodb = "2.8.2"

# [dependencies.mongodb]
# version = "2.8.2"
# default-features = false
# features = ["async-std-runtime"]

