[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.13", features = ["bson", "chrono"] }
axum = "0.8.1"
base64 = "0.22.1"
bson = "2.13.0"
deunicode = "1.6.0"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
pulldown-cmark = "0.12.2"
regex = "1.11.1"
ring = "0.17.8"
serde = { version="1.0.217", features = ["derive"] }
serde_json = "1.0.136"
tokio = "1.43.0"
tower = "0.5.2"
tower-http = { version="0.6.2", features = ["trace", "cors"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mongodb = "3.2.0"
