[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.3", features = ["bson"] }
async-global-executor = "2.3.1"
async-std = { version = "1.12.0", features = ["attributes"] }
bson = "2.10.0"
tide = "0.16.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
serde = { version="1.0.197", features = ["derive"] }
futures = "0.3.30"

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]
