[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "frontend-yew"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.1"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
once_cell = "1.19.0"
toml = "0.8.12"
graphql_client = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
wasm-bindgen-futures = "0.4.42"
# web-sys = "0.3"
gloo-utils = "0.2.0"
serde-wasm-bindgen = "0.6.5"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"

[dependencies.web-sys]
 version = "0.3"
 features = [
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.2"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]
